2006-02-22  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c
	(draw_shadow_background): Fix drawing of bottom and bottom right
	shadow rectangle.
	Add switcher window decorations.
	Remove sync hack.
	Always use double buffering.

	* plugins/switcher.c: Remove background color option.
	Use property instead of client message to indicate change of selected
	window.

2006-02-21  David Reveman  <davidr@novell.com>

	* plugins/cube.c (cubeHandleEvent): Only load new SVG when available.

2006-02-20  David Reveman  <davidr@novell.com>

	* plugins/decoration.c (decorWindowUpdate): Decorate window
	MwmDecorTitle is present.

	* src/window.c (focusWindow):
	(moveInputFocusToWindow):
	 Allow focusing windows with input hint set to false.
	 (activateWindow): Fix so that dock windows can be active.

	* src/screen.c (isClientListWindow): Don't put destroyed windows in
	client lists.

	* src/event.c (handleEvent): Fix so that dock windows can be active.
	(handleEvent): Avoid focusing windows with input hint set to false
	when mapped.

2006-02-18  David Reveman  <davidr@novell.com>

	* src/window.c (unmapWindow): Windows not being minimized should be
	placed again at next map.

	* plugins/wobbly.c (wobblyDonePaintScreen): Also add pending damage
	if any window is in initial wobbly state.

2006-02-17  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.3.

	* plugins/zoom.c (zoomIn): Translate less.
	(zoomPaintScreen): Use selected filter.
	(adjustZoomVelocity): Made zoom animation nicer.
	(zoomPreparePaintScreen): Don't zoom to much.
	ADd filter selection option.

	* plugins/decoration.c (decorPaintWindow):
	* src/paint.c (drawWindowTexture): Use screen filters.

	* include/compiz.h: Add support for adjusting filters.

	* plugins/scale.c (scaleHandleEvent): Only button 1.

	* plugins/cube.c (cubePaintTransformedScreen): Fix drawing with size
	 greater than 4.

2006-02-16  David Reveman  <davidr@novell.com>
